# tauri-plugin-sqlite

./: Cargo.toml  LICENSE  README.md  api-iife.js  package.json
crates/sqlx-sqlite-conn-mgr/: Cargo.toml  README.md
crates/sqlx-sqlite-conn-mgr/src/: attached.rs  database.rs  lib.rs  registry.rs  write_guard.rs
crates/sqlx-sqlite-conn-mgr/tests/: database_tests.rs
crates/sqlx-sqlite-observer/: Cargo.toml
crates/sqlx-sqlite-observer/src/: broker.rs  config.rs  lib.rs  schema.rs
crates/sqlx-sqlite-observer/tests/: conn_mgr_tests.rs
crates/sqlx-sqlite-toolkit/: Cargo.toml  README.md
crates/sqlx-sqlite-toolkit/src/: error.rs  pagination.rs  transactions.rs
crates/sqlx-sqlite-toolkit/tests/: transaction_state_tests.rs
guest-js/: index.test.ts  index.ts
src/: commands.rs  error.rs  lib.rs  resolve.rs  subscriptions.rs  wrapper.rs
tests/: wrapper_tests.rs
